# Verkeers-Simulatie

./: CMakeLists.txt  README.md  bushalte.cpp  bushalte.h  grafischeImpresie.txt  kruispunt.h  main.cpp  simulatie.cpp  simulatieImporter.h  simulatieUtils.h  verkeerslicht.h  voertuig.cpp  voertuiggenerator.h
testCorrectXml/: illegalSimulatie1.txt  illegalSimulatie12.txt  illegalSimulatie15.txt  illegalSimulatie17.txt  illegalSimulatie18.txt  illegalSimulatie2.txt  illegalSimulatie24.txt  illegalSimulatie25.txt  illegalSimulatie4.txt  illegalSimulatie7.txt  illegalSimulatie8.txt
testOutput/: legalSimulatie3.txt  legalSimulatie4.txt  legalSimulatie6.txt
testXmlFiles/: illegalSimulatie10.xml  illegalSimulatie12.xml  illegalSimulatie14.xml  illegalSimulatie15.xml  illegalSimulatie16.xml  illegalSimulatie18.xml  illegalSimulatie19.xml  illegalSimulatie2.xml  illegalSimulatie22.xml  illegalSimulatie23.xml  illegalSimulatie24.xml  illegalSimulatie25.xml  legalSimulatie3.xml  xmlSyntaxError6.xml
testen/: baanTest.h  bushalteTest.h  inputTest.h  outputTest.h  voertuigTest.h  voertuiggeneratorTest.h
verkeersSimulatie/: baan.cpp  baan.h  contract.h  kruispunt.cpp  nullptr.h  simulatie.h  simulatieImporter.cpp  simulatieUtils.cpp  testMain.cpp  verkeerslicht.cpp  voertuig.h  voertuiggenerator.cpp
verkeersSimulatie/testCorrectXml/: illegalSimulatie10.txt  illegalSimulatie11.txt  illegalSimulatie13.txt  illegalSimulatie14.txt  illegalSimulatie16.txt  illegalSimulatie19.txt  illegalSimulatie20.txt  illegalSimulatie21.txt  illegalSimulatie22.txt  illegalSimulatie23.txt  (+4 more)
(+34 files in other folders)
